--- a/force-app/main/default/lwc/getters/getters.html
+++ b/force-app/main/default/lwc/getters/getters.html
@@ -1,8 +1,8 @@
 <template>
     <lightning-card title="Getters">
         <div class="slds-var-m-around_medium">
-            <div>
-                Sum of {num1}, {num2} is: {sumOfNums} <br/>
+            <div class="slds-text-color_success">
+                Sum of {num1}, {num2} is: <span class="slds-text-color_error">{sumOfNums}</span> <br/>
                 First user is: {firstUser}
             </div>
         </div>
